# Quadrotor_planner

quadrotor_demo/: CMakeLists.txt  README.md  package.xml
quadrotor_demo/include/: cube_test.world  two_cubes.world
quadrotor_demo/include/quadrotor_demo/: controller.h  controller_test.h  controller_tracking.h  ipas_demo.h  localmap_update.h  localmap_update1.h  pose_pub_test.h  take_off_controller.h  task_plan.h
quadrotor_demo/include/quadrotor_demo/auto_team/: auto_team_impl.hpp
quadrotor_demo/include/quadrotor_demo/auto_vehicle/: auto_vehicle.cpp  auto_vehicle.hpp  tasks.cpp  tasks.hpp
quadrotor_demo/include/quadrotor_demo/graph/: astar.hpp  dijkstra.hpp  edge.hpp  graph.hpp  vertex.hpp
quadrotor_demo/include/quadrotor_demo/ltl/: buchi_automaton.cpp  buchi_automaton.hpp  cell_label.hpp  product_automaton.cpp  product_automaton.hpp  spot_hoa_interpreter.cpp
quadrotor_demo/include/quadrotor_demo/map/: grid_cell_impl.hpp  square_grid.cpp  square_grid.hpp  test_grid_map.cpp
quadrotor_demo/include/quadrotor_demo/task_assignment/: cbba.hpp  cbba_impl.hpp
quadrotor_demo/launch/: demo.launch  spawn_multi_quadrotors.launch  testworld.launch
quadrotor_demo/msg/: final_path.msg  localmap.msg  obstacle_info.msg  path.msg  pathes.msg  pose.msg
quadrotor_demo/rviz_cfg/: with_downward_cam.rviz
quadrotor_demo/src/: camera_detection.cpp  controller.cpp  controller_test.cpp  controller_tracking.cpp  display_camera_view.cpp  ipas_demo.cpp  localmap_update.cpp  localmap_update1.cpp  pose_pub_test.cpp  take_off.cpp  take_off_controller.cpp  task_demo.cpp  task_plan.cpp  test.cpp
quadrotor_demo/worlds/: map1.world  map2.world  map3.world  map4.world  map5_30_30.world
src/: CMakeLists.txt
src/auto_team/: CMakeLists.txt  auto_team.hpp
src/auto_vehicle/: CMakeLists.txt  package.xml
src/auto_vehicle/include/auto_vehicle/: auto_vehicle.hpp  tasks.hpp
src/auto_vehicle/src/: auto_vehicle.cpp
src/auto_vehicle/test/: test_cbba.cpp  test_ipas.cpp
src/demo/: CMakeLists.txt  package.xml
src/demo/include/quadrotor_demo/: controller_tracking.h  hungarian.h  pose_pub.h  take_off.h  take_off_controller.h
src/demo/launch/: demo.launch
src/demo/src/: camera_detection.cpp  controller_test.cpp  controller_tracking.cpp  hungarian.cpp  pose_pub.cpp  take_off.cpp
src/graph/: edge.hpp  graph.hpp  vertex.hpp
src/graph/algorithms/: astar.hpp
src/graph/details/: vertex_impl.hpp
src/ltl/: CMakeLists.txt  package.xml
src/ltl/include/ltl/: buchi_automaton.hpp  product_automaton.hpp
src/ltl/launch/: ltl_launch.launch
src/ltl/src/: product_automaton.cpp
src/ltl/test/: test_product.cpp
src/map/: CMakeLists.txt  package.xml
src/map/include/map/: grid_cell_impl.hpp  square_grid.hpp
src/map/src/: square_grid.cpp
src/map/test/: test_grid_map.cpp
src/task_assignment/: CMakeLists.txt  cbba.hpp  cbba_impl.hpp
